Update minimal Paper version to 1.18 Update minimal Java version to 17 Add /tg command Update codebase to follow Java 17 style guides Minor fixes and improvements